--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -92,36 +92,33 @@ include_directories(graphics pans pans/colorbar pans/winlist)
 
 if (Qt5LinguistTools_FOUND)
     SET(LANGUAGES fr_FR it_IT ko_KP)
-
     SET(LANGUAGE_TS_FILES)
     FOREACH(LANGUAGE ${LANGUAGES})
-    SET(TS_FILE "${CMAKE_CURRENT_SOURCE_DIR}/../resources/translations/neutrino_${LANGUAGE}.ts")
-    message(STATUS "Language : ${TS_FILE}")
-    SET(LANGUAGE_TS_FILES ${LANGUAGE_TS_FILES} ${TS_FILE})
+        SET(TS_FILE "${CMAKE_CURRENT_SOURCE_DIR}/../resources/translations/neutrino_${LANGUAGE}.ts")
+        MESSAGE(WARNING "${TS_FILE}")
+        message(STATUS "Language : ${TS_FILE}")
+        SET(LANGUAGE_TS_FILES ${LANGUAGE_TS_FILES} ${TS_FILE})
 
-    if(EXISTS ${TS_FILE})
-        qt5_add_translation(TRASL_FILES ${TS_FILE})
-    else (EXISTS ${TS_FILE})
-        qt5_create_translation(TRASL_FILES ${SOURCES} ${UIS} ${TS_FILE})
-    endif(EXISTS ${TS_FILE})
+        if(EXISTS ${TS_FILE})
+            MESSAGE(WARNING "${LANGUAGE}")
+            qt5_add_translation(TRASL_FILES ${TS_FILE})
+        else (EXISTS ${TS_FILE})
+            qt5_create_translation(TRASL_FILES ${SOURCES} ${UIS} ${TS_FILE})
+        endif(EXISTS ${TS_FILE})
 
     ENDFOREACH(LANGUAGE ${LANGUAGES})
 
     IF(LANGUAGE_TS_FILES)
+        set(TRANSL_QRC ${QRCDIR}/translations.qrc)
+        file(WRITE ${TRANSL_QRC} "<RCC>\n    <qresource prefix=\"/translations/\">\n")
+        foreach(my_file ${TRASL_FILES})
+            file(RELATIVE_PATH my_file_relative_path ${QRCDIR} ${my_file})
+            GET_FILENAME_COMPONENT(my_file_basename ${my_file} NAME)
+            file(APPEND ${TRANSL_QRC} "        <file alias=\"${my_file_basename}\">${my_file_relative_path}</file>\n")
+        endforeach()
+        file(APPEND ${TRANSL_QRC} "    </qresource>\n</RCC>")
 
-    set(TRANSL_QRC ${QRCDIR}/translations.qrc)
-    file(WRITE ${TRANSL_QRC} "<RCC>\n    <qresource prefix=\"/translations/\">\n")
-    foreach(my_file ${TRASL_FILES})
-        file(RELATIVE_PATH my_file_relative_path ${QRCDIR} ${my_file})
-        GET_FILENAME_COMPONENT(my_file_basename ${my_file} NAME)
-        file(APPEND ${TRANSL_QRC} "        <file alias=\"${my_file_basename}\">${my_file_relative_path}</file>\n")
-    endforeach()
-    file(APPEND ${TRANSL_QRC} "    </qresource>\n</RCC>")
-    list(LENGTH LANGUAGE_TS_FILES LIST_LENGTH)
-    message(STATUS "${LIST_LENGTH} translation files: ${TRANSL_QRC}")
-
-ENDIF(LANGUAGE_TS_FILES)
-
+    ENDIF(LANGUAGE_TS_FILES)
 
 endif(Qt5LinguistTools_FOUND)
 
