--- a/plugins/CMakeLists.txt
+++ b/plugins/CMakeLists.txt
@@ -1,7 +1,12 @@
 cmake_minimum_required (VERSION 3.9)
 
+option(NEUTRINOPLUGINS "Compile Neutrino plugins" ON)
+
+set (NEUTRINO_ROOT "${CMAKE_CURRENT_LIST_DIR}/..")
+
 if (${NEUTRINOPLUGINS})
 message(STATUS "Scanning plugins directory")
+
 
 SET(plugins_list "")
 FILE(GLOB allfiles "*")
