--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -96,11 +96,10 @@ if (Qt5LinguistTools_FOUND)
         SET(TS_FILE "${CMAKE_CURRENT_SOURCE_DIR}/../resources/translations/neutrino_${LANGUAGE}.ts")
         message(STATUS "Language : ${TS_FILE}")
         SET(LANGUAGE_TS_FILES ${LANGUAGE_TS_FILES} ${TS_FILE})
-        if(EXISTS ${TS_FILE})
-            qt5_add_translation(TRASL_FILES ${TS_FILE})
-        else (EXISTS ${TS_FILE})
+        if(NOT EXISTS ${TS_FILE})
             qt5_create_translation(TRASL_FILES ${SOURCES} ${UIS} ${TS_FILE})
-        endif(EXISTS ${TS_FILE})
+        endif()
+        qt5_add_translation(TRASL_FILES ${TS_FILE})
 
     ENDFOREACH(LANGUAGE ${LANGUAGES})
 
