--- a/nPhysImage/CMakeLists.txt
+++ b/nPhysImage/CMakeLists.txt
@@ -1,7 +1,22 @@
 # this is the frigging nPhysImage cmakelists
 cmake_minimum_required (VERSION 3.9)
 
-add_library (nPhysImageF SHARED mcomplex.h bidimvec.h tools.h nPhysTools.cc anymap.cc NaNStream.h  nPhysFormats.cc  nPhysImageF.h  nPhysMaths.cc  nPhysWave.cc anymap.cc anymap.h unwrapping/unwrap_goldstein.cc  unwrapping/unwrap_quality.cc  unwrapping/unwrap_simple.cc  unwrapping/unwrap_util.cc  )
+add_library (nPhysImageF SHARED
+    NaNStream.h
+    anymap.cc
+    anymap.h
+    bidimvec.h
+    mcomplex.h
+    nPhysFormats.cc
+    nPhysFormats.h
+    nPhysImageF.h
+    nPhysMaths.cc
+    nPhysMaths.h
+    nPhysTools.h
+    nPhysWave.cc
+    nPhysWave.h
+    tools.h
+    unwrapping/unwrap_goldstein.cc unwrapping/unwrap_quality.cc unwrapping/unwrap_simple.cc unwrapping/unwrap_util.cc )
 
 set(CMAKE_INCLUDE_CURRENT_DIR ON)
 
