stick to 2.7 on osx

--- a/plugins/Lineout/Lineout_V/CMakeLists.txt
+++ b/plugins/Lineout/Lineout_V/CMakeLists.txt
@@ -9,8 +9,8 @@ endif()
 
 set (CMAKE_MODULE_PATH ${NEUTRINO_ROOT}/resources/cmake)
 
-set(HEADERS "../nLineout.h")
-set(UIS "../nLineout.ui")
+set(HEADERS "../Lineout.h")
+set(UIS "../Lineout.ui")
 
 include(NeutrinoPlugin)
 ADD_NEUTRINO_PLUGIN()
