redirect cout and cerr to logwin

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -50,10 +50,12 @@ set(PROJECT_VERSION "${PROJECT_VERSION_MAJOR}.${PROJECT_VERSION_MINOR}.${PROJECT
 string(TIMESTAMP CURRENT_YEAR "%Y")
 set(PROJECT_COPYRIGHT_YEAR "2011-${CURRENT_YEAR}")
 
+set(DEBUG_LEVEL "10" CACHE string "DEBUG verbosity")
 
+option(DEBUG_LEVEL "DEBUG verbosity" "10")
 
 ## global compile options
-set(CMAKE_CXX_FLAGS_DEBUG "-O0 -ggdb -D__phys_debug=10 -DQT_DEBUG_PLUGINS=1")
+set(CMAKE_CXX_FLAGS_DEBUG "-O0 -ggdb -D__phys_debug=${DEBUG_LEVEL}")
 set(CMAKE_CXX_FLAGS_RELEASE "-O3 -DQT_NO_DEBUG -DQT_NO_DEBUG_OUTPUT")
 
 set(CMAKE_CXX_STANDARD 11)
