--- a/plugins/Lineout/CMakeLists.txt
+++ b/plugins/Lineout/CMakeLists.txt
@@ -1,10 +1,2 @@
-cmake_minimum_required (VERSION 3.9)
-
-message(STATUS "Scanning plugins directory")
-
-FILE(GLOB allfiles "*")
-FOREACH(oneplugin ${allfiles})
-	IF(IS_DIRECTORY ${oneplugin})
-		add_subdirectory(${oneplugin})
-	ENDIF()
-ENDFOREACH()
+add_subdirectory(Lineout_H)
+add_subdirectory(Lineout_V)
