--- a/plugins/Thomson_Parabola/CMakeLists.txt
+++ b/plugins/Thomson_Parabola/CMakeLists.txt
@@ -1,12 +1,15 @@
 
-include(FindOpenGL)
-if (OPENGL_GLU_FOUND)
-    list(APPEND LOCAL_LIBS ${OPENGL_GLU_LIBRARY})
-    include_directories(BEFORE "${OPENGL_INCLUDE_DIR}")
+
+# GLU
+find_library(GLU NAMES GLU)
+if (NOT ${GLU} STREQUAL "GLU-NOTFOUND")
+        list(APPEND LOCAL_LIBS ${GLU})
+        message (STATUS "using GLU ${GLU}")
 else()
-    message(WARNING "Cannot find GLU: Skipping plugin")
-    return()
+        message (WARNING "Cannot find GLU: Skipping plugin")
+        return()
 endif()
+
 
 # check for neutrino root
 if (NOT DEFINED NEUTRINO_ROOT)
