--- a/plugins/Shell/CMakeLists.txt
+++ b/plugins/Shell/CMakeLists.txt
@@ -11,39 +11,31 @@ if(PYTHONLIBS_FOUND)
 
     message(STATUS "Found Python includes: ${PYTHON_INCLUDE_DIRS}")
 
-    include(FindPythonInterp)
-
-    if(PYTHONINTERP_FOUND)
-
-
-        if (NOT NUMPY_PATH AND PYTHON_EXECUTABLE)
-            file(WRITE ${CMAKE_CURRENT_BINARY_DIR}/determineNumpyPath.py "try: import numpy; print numpy.get_include()\nexcept: pass\n")
-            exec_program("${PYTHON_EXECUTABLE}" ARGS "\"${CMAKE_CURRENT_BINARY_DIR}/determineNumpyPath.py\"" OUTPUT_VARIABLE NUMPY_PATH)
-        endif (NOT NUMPY_PATH AND PYTHON_EXECUTABLE)
-
-        if (WIN32)
-            install (DIRECTORY ${PYTHON_INCLUDE_DIRS}/../../lib/python2.7 DESTINATION bin PATTERN "python2.7/test" EXCLUDE)
-            if (NOT DEFINED NUMPY_PATH)
-                set(NUMPY_PATH "${PYTHON_INCLUDE_PATH}/../../lib/python2.7/site-packages/numpy/core/include")
-            endif()
-        endif()
-
-        find_path(
-            NUMPY_INCLUDE_DIR
-            NAMES "numpy/arrayobject.h"
-            PATHS "${NUMPY_PATH}" "${PYTHON_INCLUDE_PATH}" "${MY_NUMPY_PATH}"
-            DOC "Directory where the arrayobject.h header file can be found."
-        )
-
-        if (NUMPY_INCLUDE_DIR)
-            message(STATUS "Found NumPy includes: ${NUMPY_INCLUDE_DIR}")
-            set(NUMPY_FOUND 1 CACHE INTERNAL "NumPy found")
-            include_directories(${NUMPY_INCLUDE_DIR})
-            add_definitions(-DHAVE_NUMPY -DNPY_NO_DEPRECATED_API=NPY_1_7_API_VERSION)
-        endif ()
-
-
-    endif(PYTHONINTERP_FOUND)
+#    include(FindPythonInterp)
+#    if(PYTHONINTERP_FOUND)
+#        if (NOT NUMPY_PATH AND PYTHON_EXECUTABLE)
+#            file(WRITE ${CMAKE_CURRENT_BINARY_DIR}/determineNumpyPath.py "try: import numpy; print numpy.get_include()\nexcept: pass\n")
+#            exec_program("${PYTHON_EXECUTABLE}" ARGS "\"${CMAKE_CURRENT_BINARY_DIR}/determineNumpyPath.py\"" OUTPUT_VARIABLE NUMPY_PATH)
+#        endif (NOT NUMPY_PATH AND PYTHON_EXECUTABLE)
+#        if (WIN32)
+#            install (DIRECTORY ${PYTHON_INCLUDE_DIRS}/../../lib/python2.7 DESTINATION bin PATTERN "python2.7/test" EXCLUDE)
+#            if (NOT DEFINED NUMPY_PATH)
+#                set(NUMPY_PATH "${PYTHON_INCLUDE_PATH}/../../lib/python2.7/site-packages/numpy/core/include")
+#            endif()
+#        endif()
+#        find_path(
+#            NUMPY_INCLUDE_DIR
+#            NAMES "numpy/arrayobject.h"
+#            PATHS "${NUMPY_PATH}" "${PYTHON_INCLUDE_PATH}" "${MY_NUMPY_PATH}"
+#            DOC "Directory where the arrayobject.h header file can be found."
+#        )
+#        if (NUMPY_INCLUDE_DIR)
+#            message(STATUS "Found NumPy includes: ${NUMPY_INCLUDE_DIR}")
+#            set(NUMPY_FOUND 1 CACHE INTERNAL "NumPy found")
+#            include_directories(${NUMPY_INCLUDE_DIR})
+#            add_definitions(-DHAVE_NUMPY -DNPY_NO_DEPRECATED_API=NPY_1_7_API_VERSION)
+#        endif ()
+#    endif(PYTHONINTERP_FOUND)
 
     find_library(PYTHONQT NAMES PythonQt PATH_SUFFIXES lib)
 
