working version with nPhysD and physD

--- a/nPhysImage/CMakeLists.txt
+++ b/nPhysImage/CMakeLists.txt
@@ -15,7 +15,8 @@ add_library (nPhysImageF SHARED
     nPhysWave.cc
     nPhysWave.h
     tools.h
-    unwrapping/unwrap_goldstein.cc unwrapping/unwrap_quality.cc unwrapping/unwrap_simple.cc unwrapping/unwrap_util.cc )
+    unwrap/unwrap.h unwrap/goldstein.cc unwrap/quality.cc unwrap/simple.cc
+    )
 
 set(CMAKE_INCLUDE_CURRENT_DIR ON)
 
