--- a/plugins/Thomson_Parabola/CMakeLists.txt
+++ b/plugins/Thomson_Parabola/CMakeLists.txt
@@ -1,14 +1,15 @@
 
 
 # GLU
-find_library(GLU NAMES GLU)
-if (NOT ${GLU} STREQUAL "GLU-NOTFOUND")
-        list(APPEND LOCAL_LIBS ${GLU})
-        message (STATUS "using GLU ${GLU}")
-else()
-        message (WARNING "Cannot find GLU: Skipping plugin")
-        return()
-endif()
+#find_library(GLU NAMES GLU)
+#if (NOT ${GLU} STREQUAL "GLU-NOTFOUND")
+#        list(APPEND LOCAL_LIBS ${GLU})
+#        message (STATUS "using GLU ${GLU}")
+#else()
+#        message (WARNING "Cannot find GLU: Skipping plugin")
+#        return()
+#endif()
+set(QT_USE_QTOPENGL TRUE)
 
 
 # check for neutrino root
