WIP reactivate python on Windows

--- a/nPhysImage/CMakeLists.txt
+++ b/nPhysImage/CMakeLists.txt
@@ -27,7 +27,7 @@ target_link_libraries(nPhysImageF m ${LIBS})
 
 # install
 if (WIN32)
-    install (TARGETS nPhysImageF COMPONENT binary DESTINATION bin)
+    install (TARGETS nPhysImageF COMPONENT binary DESTINATION ".")
 elseif(LINUX)
     install (TARGETS nPhysImageF COMPONENT binary DESTINATION lib)
 elseif (APPLE)
