WIP Windows packaging

--- a/plugins/Shell/CMakeLists.txt
+++ b/plugins/Shell/CMakeLists.txt
@@ -16,7 +16,7 @@ if(PYTHONLIBS_FOUND)
         if(PYTHONINTERP_FOUND)
             message(STATUS "Found Python interpreter: ${PYTHON_EXECUTABLE}")
             if (WIN32)
-                install (DIRECTORY ${PYTHON_INCLUDE_DIRS}/../../lib/python2.7 DESTINATION . PATTERN "python2.7/test" EXCLUDE)
+                install (DIRECTORY ${PYTHON_INCLUDE_DIRS}/../../lib/python2.7 DESTINATION bin PATTERN "python2.7/test" EXCLUDE)
                 set(NUMPY_PATH "${PYTHON_INCLUDE_PATH}/../../lib/python2.7/site-packages/numpy/core/include")
             else()
                 file(WRITE ${CMAKE_CURRENT_BINARY_DIR}/determineNumpyPath.py "try: import numpy; print(numpy.get_include())\nexcept: pass\n")
