--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -172,7 +172,7 @@ elseif(WIN32)
 
     set_property(TARGET ${PROJECT_NAME} PROPERTY ENABLE_EXPORTS ON)
     set_property(TARGET ${PROJECT_NAME} PROPERTY WINDOWS_EXPORT_ALL_SYMBOLS ON)
-    install(TARGETS ${PROJECT_NAME} RUNTIME DESTINATION "." COMPONENT binary)
+    install(TARGETS ${PROJECT_NAME} RUNTIME DESTINATION bin COMPONENT binary)
 
 elseif(LINUX)
     add_executable(${PROJECT_NAME} ${filedeps})
