fix strange bug - not understood

--- a/plugins/Thomson_Parabola/CMakeLists.txt
+++ b/plugins/Thomson_Parabola/CMakeLists.txt
@@ -1,14 +1,27 @@
 
 
 # GLU
-find_library(GLU NAMES GLU)
-if (NOT ${GLU} STREQUAL "GLU-NOTFOUND")
-        list(APPEND LOCAL_LIBS ${GLU})
-        message (STATUS "using GLU ${GLU}")
-else()
-        message (WARNING "Cannot find GLU: Skipping plugin")
-        return()
-endif()
+
+find_package(OpenGL REQUIRED)
+
+    if (OPENGL_FOUND)
+        message("Found OpenGL for Mac OS")
+        message("OpenGL for Mac OS, include dir: ${OPENGL_INCLUDE_DIR}")
+        message("OpenGL for Mac OS, link libraries: ${OPENGL_gl_LIBRARY}")
+        list(APPEND LOCAL_LIBS ${OPENGL_gl_LIBRARY} ${OPENGL_glu_LIBRARY})
+    else (OPENGL_FOUND)
+        message(FATAL_ERROR "OpenGL for Mac OS not found")
+    endif()
+
+
+#find_library(GLU NAMES GLU)
+#if (NOT ${GLU} STREQUAL "GLU-NOTFOUND")
+#        list(APPEND LOCAL_LIBS ${GLU})
+#        message (STATUS "using GLU ${GLU}")
+#else()
+#        message (WARNING "Cannot find GLU: Skipping plugin")
+#        return()
+#endif()
 set(QT_USE_QTOPENGL TRUE)
 
 
