--- a/resources/icons/Makefile
+++ b/resources/icons/Makefile
@@ -1,12 +1,12 @@
 SVGs = $(wildcard *.svg) 
 PNGs := $(patsubst %.svg, %.png, $(SVGs))
 
-INKSCAPE= /Applications/Inkscape.app/Contents/Resources/bin/inkscape
+INKSCAPE= /Applications/Inkscape.app/Contents/MacOS/inkscape
 
 all: $(PNGs)
 
 %.png:%.svg
-	$(INKSCAPE) -f $< -e $@ 
+	$(INKSCAPE) $< -o $@ 
 	rm -f ../../build/qrc_neutrino.cpp
 
 clean:
