WIP cleaning warnings

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -65,7 +65,7 @@ if ("${CMAKE_CXX_COMPILER_ID}" MATCHES "Clang")
     add_compile_options(-stdlib=libc++)
 elseif ("${CMAKE_CXX_COMPILER_ID}" STREQUAL "GNU")
     add_compile_options(-static-libgcc -static-libstdc++)
- endif()
+endif()
 
 set(CMAKE_MODULE_PATH ${CMAKE_CURRENT_SOURCE_DIR}/resources/cmake)
 
@@ -73,5 +73,9 @@ include(Package)
 
 add_subdirectory (nPhysImage)
 add_subdirectory (src)
+
+#set(NEU_PLUGIN_LIST "")
 add_subdirectory (plugins)
+#message(STATUS "${NEU_PLUGIN_LIST}")
+#target_compile_definitions(Neutrino PRIVATE "NEU_PLUGIN_LIST=${NEU_PLUGIN_LIST}")
 
