--- a/nPhysImage/CMakeLists.txt
+++ b/nPhysImage/CMakeLists.txt
@@ -18,6 +18,12 @@ add_library (nPhysImageF SHARED
     unwrap/unwrap.h unwrap/goldstein.cc unwrap/quality.cc unwrap/simple.cc
     )
 
+if (CMAKE_CXX_COMPILER_ID STREQUAL "Clang")
+#   target_link_options(nPhysImageF PRIVATE -static-libstdc++)
+elseif (CMAKE_CXX_COMPILER_ID STREQUAL "GNU")
+  target_link_options(nPhysImageF PRIVATE -static-libgcc -static-libstdc++)
+endif()
+
 set(CMAKE_INCLUDE_CURRENT_DIR ON)
 
 set (CMAKE_MODULE_PATH ${CMAKE_CURRENT_SOURCE_DIR}/../resources/cmake)
