--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -129,7 +129,7 @@ if(APPLE)
 
 elseif(WIN32)
     set (RC_WIN "${${PROJECT_NAME}_SOURCE_DIR}/resources/winPackage/neutrino.rc")
-    list (APPEND CMAKE_EXE_LINKER_FLAGS "-Wl,--export-all-symbols")
+    list (APPEND CMAKE_EXE_LINKER_FLAGS "-Wl,--export-all-symbols -Wl,-allow-multiple-definition")
     if (CMAKE_BUILD_TYPE STREQUAL "Debug")
         add_executable(${PROJECT_NAME} ${RC_WIN} ${filedeps})
     else()
@@ -159,6 +159,8 @@ target_link_libraries(${PROJECT_NAME} ${LIBS} ${MODULES_TWEAK})
 if (CMAKE_CXX_COMPILER_ID STREQUAL "Clang")
 #   target_link_options(${PROJECT_NAME} PRIVATE -static-libstdc++)
 elseif (CMAKE_CXX_COMPILER_ID STREQUAL "GNU")
-  target_link_options(${PROJECT_NAME} PRIVATE -static-libgcc -static-libstdc++)
+    if (APPLE)
+        target_link_options(${PROJECT_NAME} PRIVATE -static-libgcc -static-libstdc++)
+    endif()
 endif()
 
