add .gel tiff dialect

--- a/plugins/Lineout/Lineout_H/CMakeLists.txt
+++ b/plugins/Lineout/Lineout_H/CMakeLists.txt
@@ -1,6 +1,6 @@
 # check for neutrino root
 if (NOT DEFINED NEUTRINO_ROOT)
-    set (NEUTRINO_ROOT "${CMAKE_CURRENT_LIST_DIR}/../..")
+    set (NEUTRINO_ROOT "${CMAKE_CURRENT_LIST_DIR}/../../..")
 endif()
 
 if (NOT IS_ABSOLUTE ${NEUTRINO_ROOT})
@@ -13,5 +13,6 @@ set(HEADERS "../Lineout.h")
 
 set(UIS "../Lineout.ui")
 include(NeutrinoPlugin)
+set (PLUGIN_INSTALL_DIR "${CMAKE_CURRENT_BINARY_DIR}/../../../Neutrino.app/Contents/Resources/plugins")
 ADD_NEUTRINO_PLUGIN()
 
