fix for older qt5 versions (appimage)

--- a/resources/linuxPackage/Neutrino.desktop
+++ b/resources/linuxPackage/Neutrino.desktop
@@ -8,12 +8,13 @@ Categories=Science;Physics;
 
 Keywords=graphics;science;raw;
 
-Exec=/usr/bin/Neutrino
+Exec=Neutrino
 Terminal=false
 StartupNotify=true
 
 MimeType=application/x-neutrino;image/png;image/tiff;image/x-portable-pixmap;image/x-portable-floatmap;
 
-Icon=Neutrino
+Icon=icon
 
 
+X-AppImage-Version=77b88bf
