--- a/resources/linuxPackage/Neutrino.desktop
+++ b/resources/linuxPackage/Neutrino.desktop
@@ -14,4 +14,4 @@ StartupNotify=true
 
 MimeType=application/x-neutrino;image/png;image/tiff;image/x-portable-pixmap;image/x-portable-floatmap;
 
-Icon=icon
+Icon=neutrino
