clean translation stuff

--- a/plugins/CMakeLists.txt
+++ b/plugins/CMakeLists.txt
@@ -8,7 +8,7 @@ if (${NEUTRINOPLUGINS})
 
     message(STATUS "Scanning plugins directory")
 
-    FILE(GLOB allfiles "*")
+    FILE(GLOB allfiles "*" LIST_DIRECTORIES true)
 
     FOREACH(oneplugin ${NEUTRINO_SKIP_PLUGINS})
         list(FILTER allfiles EXCLUDE REGEX ".*/plugins/${oneplugin}$")
@@ -21,8 +21,13 @@ if (${NEUTRINOPLUGINS})
     FOREACH(oneplugin ${allfiles})
         IF(IS_DIRECTORY ${oneplugin})
             add_subdirectory(${oneplugin})
+            get_filename_component(MY_PROJECT_NAME ${oneplugin} NAME)
+            set(NEU_PLUGIN_LIST "${NEU_PLUGIN_LIST} ${MY_PROJECT_NAME}")
+
         ENDIF()
     ENDFOREACH()
 
+    message(STATUS "${NEU_PLUGIN_LIST}")
+    target_compile_definitions(Neutrino PRIVATE NEU_PLUGIN_LIST=${NEU_PLUGIN_LIST})
 
 endif()
